# qgames

./: .gitignore  .gitmodules  ChangeLog  INSTALL  MIT-LICENSE  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  libtool
common/: Makefile.am  list.c  list.h  log.c  log.h  test_list.c  test_qcode.c
doc/: qgames-code.txt
games/: AfricaUniversity.qgame  Ajedrez.qgame  AjedrezBenedicto.qgame  AjedrezLosAlamos.qgame  AjedrezQGames.qgame  AntiAjedrezQGames.qgame  Gomoku.qgame  GranAvance.qgame  GranAvance10x10.qgame  GranAvanceCaptura.qgame  Jubilado.qgame  JustaDeCaballos.qgame  Pente.qgame  RevueltaCampesina.qgame  TaTeTi.qgame
games/pgn/: 04087c49a299@qgames.com.ar.pgn  1264.pgn  18042893@qgames.com.ar.pgn  208.pgn  2208958.brainking.pgn  332.pgn  340.pgn  3762134.brainking.pgn  3976337.brainking.pgn  5c3395f8ed00@qgames.com.ar.pgn  715.pgn  c243cc886cac@qgames.com.ar.pgn  e0bb8d66dd00@qgames.com.ar.pgn  ga_1.pgn  ga_2.pgn  ga_4.pgn  mate-del-loco.pgn
ifaces/: Makefile.am  Makefile.in  qgames-console.c
images/Original/: damas.xcf
include/: defines.h  qgames.h  qgames_analyzer.h  qgames_code.h
include/qgames/: casillero.h  defines.h  direccion.h  interfaz.h  simbolos.h  simetria.h  tablero.h  tipojuego.h  tipopieza.h  vinculo.h  zona.h
interfaces/: Makefile.am  Makefile.in  qgames-ncurses.c
lib/: Makefile.am  Makefile.in  analizador.c  analizador.h  casillero.c  direccion.c  graph.c  graphdef.h  movida.c  movida.h  notacion.c  notacion.h  partida.c  partida.h  pieza.c  pieza.h  posicion.c  posicion.h  qcode_interfaz.c  qgame_code.c  qgames-posibles.c  qgames.c  qgames_analyzer.c  qgames_code.c  qgames_tjuego.c  simbolos.h  tablero.c  tipojuego.c  tipojuego.h  tipopieza.c  vinculo.c
parser/: Makefile.am  Makefile.in  libpgn_parser_a-pgn_scanner.c  pgn_scanner.h  pgn_scanner.l  qgames_parser.c  qgames_parser.h  qgames_parser.y  qgames_scanner.c  qgames_scanner.l  symtable.c  symtable.h  test-pgn.c  test-symtable.c
src/: Makefile.am  Makefile.in  analizador.c  analizador.h  casillero.c  direccion.c  graph.c  graphdef.h  movida.c  movida.h  notacion.c  notacion.h  partida.c  partida.h  pieza.c  pieza.h  posicion.c  posicion.h  qgames.c  qgames_analyzer.h  qgames_core.h  qgames_parser.c  qgames_parser.h  qgames_parser.y  qgames_scanner.c  qgames_scanner.l  qgames_tjuego.c  regla.h  simbolos.h  tablero.c  tipojuego.c  tipojuego.h  tipojuego_gets_inline.h  tipopieza.c
test/: Makefile.am  Makefile.in  qgtest.sh  test-ajedrezq.c  test-gomoku.c  test-qgames-scanner.c  test-qgames-scanner.l  test-tateti.c
test/pgn/: 1221.pgn  1222.pgn  1263.pgn  2234865.brainking.pgn  2788860.brainking.pgn  2f8ba291980f@qgames.com.ar.pgn  3656850.brainking.pgn  3855057.brainking.pgn  634.pgn  8a6e1eb7f6bc@qgames.com.ar.pgn  c38cf9791783@qgames.com.ar.pgn  ddc8d04cd276@qgames.com.ar.pgn  ga_3.pgn  ga_5.pgn
test/qgtest/: Makefile.am  Makefile.in  africa-university.qgtest  ajedrez-benedicto.qgtest  ajedrez.qgtest  brainking-1161280.qgtest  brainking-1192477.qgtest  brainking-1278710.qgtest  losalamos-1.qgtest  opengames-1003.qgtest  opengames-1010.qgtest  opengames-1016.qgtest  opengames-1018.qgtest  opengames-1020.qgtest  opengames-1029.qgtest  opengames-1031.qgtest  opengames-1034.qgtest  opengames-1058.qgtest  opengames-1059.qgtest  opengames-1062.qgtest  opengames-1065.qgtest  opengames-1066.qgtest  opengames-1067.qgtest  opengames-1079.qgtest  opengames-1080.qgtest  opengames-120.qgtest  opengames-1210.qgtest  opengames-1212.qgtest  opengames-1222.qgtest  opengames-1234.qgtest  opengames-1239.qgtest  opengames-1240.qgtest  opengames-1243.qgtest  opengames-1251.qgtest  opengames-1260.qgtest  opengames-1287.qgtest  opengames-1307.qgtest  opengames-1311.qgtest  opengames-1317.qgtest  opengames-1319.qgtest  (+105 more)
test/qgtest/fail/: brainking-1161279.qgtest  brainking-1183358.qgtest  brainking-1204122.qgtest
test/qgtest/pass/: ajedrez-benedicto.qgtest  antiq-01.qgtest  brainking-1184471.qgtest  brainking-1194638.qgtest  brainking-2835306.qgtest  brainking-6429624.qgtest  gran-avance-captura-1.qgtest  opengames-1001.qgtest  opengames-1004.qgtest  opengames-1006.qgtest  opengames-1015.qgtest  opengames-1017.qgtest  opengames-102.qgtest  opengames-1021.qgtest  opengames-1022.qgtest  opengames-1023.qgtest  opengames-1030.qgtest  opengames-1032.qgtest  opengames-1033.qgtest  opengames-1057.qgtest  opengames-1068.qgtest  opengames-1069.qgtest  opengames-1075.qgtest  opengames-1085.qgtest  opengames-1191.qgtest  opengames-1203.qgtest  opengames-1204.qgtest  opengames-1220.qgtest  opengames-1221.qgtest  opengames-1250.qgtest  opengames-1252.qgtest  opengames-1257.qgtest  opengames-1261.qgtest  opengames-1262.qgtest  opengames-127.qgtest  opengames-1288.qgtest  opengames-1301.qgtest  opengames-1303.qgtest  opengames-1305.qgtest  opengames-1309.qgtest  (+84 more)
tools/: Makefile.am  Makefile.in  bin2c.c  bin2c_orig.c  download-brainking.sh  download-opengames.sh  list-gomoku-opengames.sh  list-jubilado-opengames.sh  list-justa-de-caballos.sh  list-los-alamos-brainking.sh  list-opengames-benedicto.sh  list-pente-opengames.sh  list-revuelta-campesina-opengames.sh
vm/: Makefile.am  Makefile.in  qcode.c  qcode_interfaz.c  qgames_code.c  qgames_code_impl.h
