SUBDIRS = tools vm lib parser test ifaces

# EXTRA_DIST = $(srcdir)/games/*.qgame $(srcdir)/tools/*.sh
EXTRA_DIST = $(srcdir)/tools/*.sh
gamesdir = $(pkgdatadir)/games
imagesdir = $(pkgdatadir)/images
dist_games_DATA = $(srcdir)/games/*.qgame
dist_images_DATA = $(srcdir)/images/48x48/*.png $(srcdir)/images/30x30/*.png

