SUBDIRS = tools vm lib parser test ifaces

EXTRA_DIST = $(srcdir)/tools/*.sh
dist_games_DATA = $(srcdir)/games/*.qgame
images48dir=$(pkgdatadir)/images/48x48
images30dir=$(pkgdatadir)/images/30x30
dist_images48_DATA = $(srcdir)/images/48x48/*.png
dist_images30_DATA = $(srcdir)/images/30x30/*.png

include_HEADERS = include/qgames.h include/qgames_analyzer.h include/qgames_code.h
